# rules_js

./: .bazelignore  MODULE.bazel
.aspect/workflows/: config.yaml
.github/workflows/: ci-workflows.yaml
contrib/nextjs/: defs.bzl
e2e/js_binary_workspace/: BUILD.bazel
e2e/npm_link_package/cjs/: BUILD.bazel
e2e/npm_link_package/cjs/pkg/: BUILD.bazel
e2e/npm_link_package/cjs/src/: BUILD.bazel
e2e/npm_link_package/cjs/wrapper-lib/: BUILD.bazel
e2e/npm_link_package/cjs/wrapper-lib/subdir/: BUILD.bazel
e2e/npm_link_package/esm/: BUILD.bazel
e2e/npm_link_package/esm/lib/: package.json
e2e/npm_link_package/esm/pkg/: BUILD.bazel  package.json
e2e/npm_link_package/esm/src/: BUILD.bazel
e2e/npm_link_package/esm/wrapper-lib/: BUILD.bazel  package.json
e2e/npm_link_package/esm/wrapper-lib/subdir/: BUILD.bazel
e2e/pnpm_lockfiles/cases/peer-dep-path-encoding/workspace/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
e2e/proto_import_prefix/: BUILD.bazel  MODULE.bazel  main.ts  package.json
e2e/proto_import_prefix/proto/: BUILD.bazel  logger.proto
e2e/proto_import_prefix/proto/stripping/: BUILD.bazel  s.proto
e2e/proto_import_prefix/tools/toolchains/: BUILD.bazel
e2e/protobuf-es/: MODULE.bazel  README.md
e2e/protobuf-es/tools/toolchains/: BUILD
e2e/protobuf-google/tools/toolchains/: BUILD
e2e/transition_deps/: .bazelrc  .npmrc  BUILD.bazel  MODULE.bazel
e2e/transition_deps/app/: BUILD.bazel  test.js
e2e/transition_deps/flags/: BUILD.bazel
e2e/transition_deps/greeter/debug/: BUILD.bazel  index.js  package.json
e2e/transition_deps/greeter/release/: BUILD.bazel  index.js
examples/: .bazelignore  MODULE.bazel  pnpm-lock.yaml  pnpm-workspace.yaml
examples/.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
examples/package_json_module/: BUILD.bazel  package.json
examples/proto/tools/: package.json
examples/protobuf/: BUILD.bazel  js_proto_transition_library.bzl  logger.proto  pnpm-lock.yaml  protobuf.md  s.proto
examples/protobuf/bufbuild-es/: BUILD.bazel  package.json  pnpm-lock.yaml  test_proto.js
examples/protobuf/google-protobuf/: BUILD.bazel  user.proto
examples/protobuf/tools/toolchains/: BUILD
examples/runfiles/: BUILD.bazel  module_name_test.js  outer.js  resolve-args.js
js/: BUILD.bazel  proto.bzl
js/private/: js_binary.sh.tpl  js_proto_toolchain.bzl  js_run_binary.bzl  proto.bzl  proto_common.bzl
js/private/test/data/: BUILD.bazel
js/private/test/image/: asserts.bzl
js/private/test/js_run_binary/: BUILD.bazel
js/private/test/snapshots/: launcher.sh
