load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "main_lib",
    srcs = ["main.ts"],
    deps = [
        "//proto:logger_proto",
        "//proto/stripping:s_proto",
    ],
)

js_test(
    name = "main",
    data = [":main_lib"],
    entry_point = "main.ts",
)
