load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//package_json_module:mocha/package_json.bzl", mocha_bin = "bin")

npm_link_all_packages()

mocha_bin.mocha_test(
    name = "test",
    args = [package_name() + "/test.js"],
    data = [
        "package.json",
        ":test.js",
    ],
)
