load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("//:js_proto_transition_library.bzl", "js_proto_transition_library")

proto_library(
    name = "user_proto",
    srcs = [
        "user.proto",
    ],
)

js_library(
    name = "test_lib",
    srcs = ["test_proto.js"],
    tags = ["manual"],
    deps = [
        ":user_proto",
    ],
)

js_proto_transition_library(
    name = "test_lib_transition",
    js_proto_implementation = "google_protobuf",
    target = ":test_lib",
)

js_test(
    name = "test",
    data = [":test_lib_transition"],
    entry_point = "test_proto.js",
)
