load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")

js_binary(
    name = "main",
    args = ["foo"],
    data = [
        "//:node_modules/@aspect-test/a",
        "//:node_modules/@aspect-test/b",
        "//:node_modules/@aspect-test/c",
        "//:node_modules/sharp",
        "//esm:node_modules/@e2e/lib",
        "//esm:node_modules/@e2e/pkg",
        "//esm:node_modules/@e2e/wrapper-lib",
    ],
    entry_point = "main.mjs",
    node_options = [
        "--experimental-json-modules",  # Required for importing .json from .mjs
    ],
)

js_test(
    name = "test",
    args = ["foo"],
    data = [
        "//:node_modules/@aspect-test/a",
        "//:node_modules/@aspect-test/b",
        "//:node_modules/@aspect-test/c",
        "//:node_modules/sharp",
        "//esm:node_modules/@e2e/lib",
        "//esm:node_modules/@e2e/pkg",
        "//esm:node_modules/@e2e/wrapper-lib",
    ],
    entry_point = "main.mjs",
    log_level = "info",
    node_options = [
        "--experimental-json-modules",  # Required for importing .json from .mjs
    ],
)
