load("@aspect_rules_js//js:proto.bzl", "js_proto_toolchain")
load("@npm//:@bufbuild/protoc-gen-es/package_json.bzl", gen_es = "bin")

gen_es.protoc_gen_es_binary(
    name = "protoc_gen_es",
)

js_proto_toolchain(
    name = "gen_es_protoc_plugin",
    plugin_bin = ":protoc_gen_es",
    plugin_name = "es",
    plugin_options = [
        "keep_empty_files=true",
        "target=js+dts",
        "import_extension=js",
    ],
    runtime = "//:node_modules/@bufbuild/protobuf",
)
